update learn material

--- a/src/01_introduction/src/index.html
+++ b/src/01_introduction/src/index.html
@@ -25,6 +25,8 @@
               <li><a href="01.html">v-once, v-bind, v-html</a></li>
               <li><a href="02.html">v-on:(events)</a></li>
               <li><a href="03.html">Two-way data binding</a></li>
+              <li><a href="04.html">Computed, watch and shorthand properties</a></li>
+              <li><a href="05.html">Styling with CSS</a></li>
             </ol>
           </div>
         </div>
