--- a/src/01_introduction/src/03.html
+++ b/src/01_introduction/src/03.html
@@ -3,13 +3,13 @@
   <head>
     <title>Learn Vue JS</title>
     <meta charset="utf-8"/>
-    <link rel="stylesheet" type="text/css" href="../../semantic/dist/semantic.min.css">
+    <link rel="stylesheet" type="text/css" href="../../../dependencies/emantic/dist/semantic.min.css">
     <script
       src="https://code.jquery.com/jquery-3.1.1.min.js"
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
       crossorigin="anonymous">
     </script>
-    <script src="../../semantic/dist/semantic.min.js"></script>
+    <script src="../../../dependencies/semantic/dist/semantic.min.js"></script>
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
   </head>
   <body>
